# py-src-layout

./: .gitignore  README.md  clean.py  init_venv.bat  pyproject.toml  setup.cfg
src/pkgname/: __main__.py
