[build-system]         
requires = ["setuptools"]         
build-backend = "setuptools.build_meta"         

[project]         
name = "$src-template211"         
version = "0.0.0a0"         
# Should you pin version numbers of dependencies?         
# It depends on the use case: https://stackoverflow.com/q/28509481/1820618         
dependencies = [         
    'importlib-resources; python_version<"3.10"',
]         
